syntax = "proto2";

import "api/stats/events.proto";
package api.stats;


message GameStats {
    repeated api.stats.Hit hits = 1;
}
